Tue Jul  7 23:49:46 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/OfferedDeadlineWatchdog.cpp:

          Fixed a bug in the execute() that should not calculate
          the period between two samples if it's called upon first 
          sample receiving.
                    
        * tests/DCPS/Deadline/publisher.cpp:

          Adjusted the expected missed deadline calls as the changes
          were made.
          
Tue Jul  7 16:07:12 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/modules/IDL2JNIHelper.pm:
        * MPC/modules/IDLBase.pm:

          Merged MPC IDL refactoring from ERLANG_SUPPORT branch (r2243).

Thu Jul  2 20:49:29 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * java/build_scripts/jms_scoreboard.pl:

          Extended the timeout and added a workaround for ant on Windows not
          handling -Dfoo=bar=1 correctly.

Tue Jun 30 17:45:01 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/GuidConverter.h:
        * dds/DCPS/GuidConverter.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

          Fixed for Solaris/x86 with GCC 3.3.2; now using DDS_HAS_WCHAR because
          this platform does indded have ACE_HAS_WCHAR even though its C++ std
          library is incomplete.

Mon Jun 29 21:36:37 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/GuidConverter.h:
        * dds/DCPS/GuidConverter.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

          Fixes for platforms without ACE_HAS_WCHAR.  Current support platforms
          with this problem are GCC 3.3.2 on Solaris/x86 and GCC 3.3.5 on QNX.
          The C++ standard library that comes with these compilers is lacking
          std::wstring, std::wostream, etc.

Mon Jun 29 20:38:49 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * docs/INSTALL:

          Added a note on how to run tests for a static build.
